add caddy for https

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -128,5 +128,20 @@ services:
         condition: service_healthy
     restart: unless-stopped
 
+  caddy:
+    image: caddy:2
+    container_name: birdie-caddy
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./caddy/Caddyfile:/etc/caddy/Caddyfile:ro
+      - caddy_data:/data
+      - caddy_config:/config
+    depends_on:
+      - api
+
 volumes:
+  caddy_data:
+  caddy_config:
   pgdata:
