--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,9 +1,9 @@
-mjserverinc.asuscomm.com {
+api.mybirdies.ca {
     encode zstd gzip
-    reverse_proxy api:8000   
-    # 선택: ACME 연락 이메일 지정(권장)
+    reverse_proxy api:8000
     tls shinminje@gmail.com
 }
+
 # Optional: keep apex redirects out of Caddy (Firebase can handle www->apex)
 
 ; api.mybirdies.ca {
