update gmail pub/sub

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,140 @@
 app/.DS_Store
 .venv
 __pycache__/
+.venv/lib/python3.12/site-packages/__pycache__/py.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/__init__.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/_argcomplete.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/_version.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/cacheprovider.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/capture.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/compat.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/debugging.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/deprecated.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/doctest.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/faulthandler.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/fixtures.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/freeze_support.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/helpconfig.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/hookspec.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/junitxml.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/legacypath.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/logging.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/main.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/monkeypatch.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/nodes.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/outcomes.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/pastebin.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/pathlib.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/pytester.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/python.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/python_api.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/python_path.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/recwarn.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/reports.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/runner.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/scope.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/setuponly.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/setupplan.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/skipping.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/stash.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/stepwise.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/terminal.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/threadexception.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/timing.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/tmpdir.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/unittest.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/unraisableexception.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/warning_types.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/__pycache__/warnings.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/_code/__init__.py
+.venv/lib/python3.12/site-packages/_pytest/_code/__pycache__/__init__.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/_code/__pycache__/code.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/_code/__pycache__/source.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/_code/code.py
+.venv/lib/python3.12/site-packages/_pytest/_code/source.py
+.venv/lib/python3.12/site-packages/_pytest/_io/__pycache__/__init__.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/_io/__pycache__/pprint.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/_io/__pycache__/saferepr.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/_io/__pycache__/terminalwriter.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/_io/__pycache__/wcwidth.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/_io/pprint.py
+.venv/lib/python3.12/site-packages/_pytest/_io/terminalwriter.py
+.venv/lib/python3.12/site-packages/_pytest/_py/__pycache__/__init__.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/_py/__pycache__/error.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/_py/__pycache__/path.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/_py/error.py
+.venv/lib/python3.12/site-packages/_pytest/_py/path.py
+.venv/lib/python3.12/site-packages/_pytest/_version.py
+.venv/lib/python3.12/site-packages/_pytest/assertion/__init__.py
+.venv/lib/python3.12/site-packages/_pytest/assertion/__pycache__/__init__.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/assertion/__pycache__/rewrite.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/assertion/__pycache__/truncate.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/assertion/__pycache__/util.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/assertion/rewrite.py
+.venv/lib/python3.12/site-packages/_pytest/assertion/truncate.py
+.venv/lib/python3.12/site-packages/_pytest/assertion/util.py
+.venv/lib/python3.12/site-packages/_pytest/cacheprovider.py
+.venv/lib/python3.12/site-packages/_pytest/capture.py
+.venv/lib/python3.12/site-packages/_pytest/compat.py
+.venv/lib/python3.12/site-packages/_pytest/config/__init__.py
+.venv/lib/python3.12/site-packages/_pytest/config/__pycache__/__init__.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/config/__pycache__/argparsing.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/config/__pycache__/compat.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/config/__pycache__/exceptions.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/config/__pycache__/findpaths.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/config/argparsing.py
+.venv/lib/python3.12/site-packages/_pytest/config/compat.py
+.venv/lib/python3.12/site-packages/_pytest/config/findpaths.py
+.venv/lib/python3.12/site-packages/_pytest/debugging.py
+.venv/lib/python3.12/site-packages/_pytest/doctest.py
+.venv/lib/python3.12/site-packages/_pytest/faulthandler.py
+.venv/lib/python3.12/site-packages/_pytest/fixtures.py
+.venv/lib/python3.12/site-packages/_pytest/freeze_support.py
+.venv/lib/python3.12/site-packages/_pytest/helpconfig.py
+.venv/lib/python3.12/site-packages/_pytest/hookspec.py
+.venv/lib/python3.12/site-packages/_pytest/junitxml.py
+.venv/lib/python3.12/site-packages/_pytest/legacypath.py
+.venv/lib/python3.12/site-packages/_pytest/logging.py
+.venv/lib/python3.12/site-packages/_pytest/main.py
+.venv/lib/python3.12/site-packages/_pytest/mark/__init__.py
+.venv/lib/python3.12/site-packages/_pytest/mark/__pycache__/__init__.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/mark/__pycache__/expression.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/mark/__pycache__/structures.cpython-312.pyc
+.venv/lib/python3.12/site-packages/_pytest/mark/expression.py
+.venv/lib/python3.12/site-packages/_pytest/mark/structures.py
+.venv/lib/python3.12/site-packages/_pytest/monkeypatch.py
+.venv/lib/python3.12/site-packages/_pytest/nodes.py
+.venv/lib/python3.12/site-packages/_pytest/outcomes.py
+.venv/lib/python3.12/site-packages/_pytest/pastebin.py
+.venv/lib/python3.12/site-packages/_pytest/pathlib.py
+.venv/lib/python3.12/site-packages/_pytest/pytester.py
+.venv/lib/python3.12/site-packages/_pytest/pytester_assertions.py
+.venv/lib/python3.12/site-packages/_pytest/python.py
+.venv/lib/python3.12/site-packages/_pytest/python_api.py
+.venv/lib/python3.12/site-packages/_pytest/python_path.py
+.venv/lib/python3.12/site-packages/_pytest/recwarn.py
+.venv/lib/python3.12/site-packages/_pytest/reports.py
+.venv/lib/python3.12/site-packages/_pytest/runner.py
+.venv/lib/python3.12/site-packages/_pytest/scope.py
+.venv/lib/python3.12/site-packages/_pytest/setuponly.py
+.venv/lib/python3.12/site-packages/_pytest/skipping.py
+.venv/lib/python3.12/site-packages/_pytest/stepwise.py
+.venv/lib/python3.12/site-packages/_pytest/terminal.py
+.venv/lib/python3.12/site-packages/_pytest/threadexception.py
+.venv/lib/python3.12/site-packages/_pytest/timing.py
+.venv/lib/python3.12/site-packages/_pytest/tmpdir.py
+.venv/lib/python3.12/site-packages/_pytest/unittest.py
+.venv/lib/python3.12/site-packages/_pytest/unraisableexception.py
+.venv/lib/python3.12/site-packages/_pytest/warning_types.py
+.venv/lib/python3.12/site-packages/_pytest/warnings.py
+.venv/lib/python3.12/site-packages/pytest-8.3.2.dist-info/AUTHORS
+.venv/lib/python3.12/site-packages/pytest-8.3.2.dist-info/entry_points.txt
+.venv/lib/python3.12/site-packages/pytest-8.3.2.dist-info/INSTALLER
+.venv/lib/python3.12/site-packages/pytest-8.3.2.dist-info/LICENSE
+.venv/lib/python3.12/site-packages/pytest-8.3.2.dist-info/METADATA
+.venv/lib/python3.12/site-packages/pytest-8.3.2.dist-info/RECORD
+.venv/lib/python3.12/site-packages/pytest-8.3.2.dist-info/REQUESTED
+.venv/lib/python3.12/site-packages/pytest-8.3.2.dist-info/top_level.txt
+.venv/lib/python3.12/site-packages/pytest-8.3.2.dist-info/WHEEL
+.venv/lib/python3.12/site-packages/pytest/__init__.py
+.venv/lib/python3.12/site-packages/pytest/__pycache__/__init__.cpython-312.pyc
