--- a/.env.sample
+++ b/.env.sample
@@ -10,3 +10,10 @@ SYNC_DATABASE_URL=postgresql+psycopg://postgres:postgres@localhost:5432/birdiebu
 
 # Redis
 REDIS_URL=redis://localhost:6379/0
+
+# Gmail OAuth & Pub/Sub
+GOOGLE_CLIENT_ID=your-client-id.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your-client-secret
+GOOGLE_PROJECT_ID=your-project-id
+GOOGLE_PUBSUB_TOPIC=projects/your-project-id/topics/gmail-notifications
+GMAIL_OAUTH_REDIRECT_URI=https://api.mybirdies.ca/oauth2/google/callback
