[Update] SMS notification added

--- a/.env.sample
+++ b/.env.sample
@@ -17,3 +17,8 @@ GOOGLE_CLIENT_SECRET=your-client-secret
 GOOGLE_PROJECT_ID=your-project-id
 GOOGLE_PUBSUB_TOPIC=projects/your-project-id/topics/gmail-notifications
 GMAIL_OAUTH_REDIRECT_URI=https://api.mybirdies.ca/oauth2/google/callback
+
+# Twilio SMS (set these to enable SMS notifications)
+TWILIO_ACCOUNT_SID=ACxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+TWILIO_AUTH_TOKEN=your-auth-token
+TWILIO_FROM_NUMBER=+1234567890
